plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
    group = 'store.nightmarket'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.springframework.boot'

    ext {
        set('springCloudVersion', "2024.0.0")
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}

def domain = [project(":item"), project(":order"), project(":payment"), project(":delivery")]

configure(domain) {
    bootJar {
        enabled = false
    }
    dependencies {
        implementation project(':common')

        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
        testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.4'
        testImplementation("org.assertj:assertj-core:3.27.3")
        compileOnly 'org.springframework.boot:spring-boot-starter'
    }
}

project(':common') {
    bootJar {
        enabled = false
    }
    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        compileOnly 'org.springframework.boot:spring-boot-starter'
    }
}
